# ZEON-Refiller

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __main__.py  builder.py  config.py  pending_counter.py  replenisher.py  tasks.py  vm_refiller_service.py  vsphere_pool_manager.py
app/logger/: logger_setup.py  opensearch_logger_handler.py
docker/: .dockerignore  Dockerfile  build-and-push.ps1
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  secrets.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml  patch-configmap-vm-prefix.yaml  values.yaml
k8s/overlays/prod/: kustomization.yaml  patch-configmap-vm-prefix.yaml  values.yaml
source/: BlissInitSetup.py  GameTutorial.py
source/core/DataBase/: DBmodels.py
source/core/VMware/: BlissOSController.py  NSXManager.py
source/exceptions/: GameBotError.py  vsphere.py
source/states/Tutorial/: InitGame.py
source/utils/: TemplateMatcher.py
src/refiller/: __main__.py
src/refiller/domain/: builder.py  pool_interface.py  replenisher.py
src/refiller/infrastructure/logger/: log_ctx.py  opensearch_logger_handler.py
src/refiller/infrastructure/vsphere/: manager.py
src/refiller/legacy/: __init__.py
src/refiller/legacy/source/: BlissInitSetup.py
src/refiller/legacy/source/core/DataBase/: DBcore.py  DBrepos.py
src/refiller/legacy/source/core/VMware/: VSphereConnection.py  VSphereManager.py
src/refiller/legacy/source/exceptions/: ZeonError.py
src/refiller/legacy/source/states/: BotState.py  FinishState.py
src/refiller/services/: service.py
src/refiller/shared/: retry.py  settings.py
test/: builder_test.py  conftest.py  test_builder_pool.py  test_clone_worker.py  test_config.py  test_replenisher.py  test_retry.py  vsphere_pool_test.py
(+6 files in other folders)
