[tool.poetry]
name = "ZEON-Refiller"
version = "1.0.0"
description = ""
authors = ["Air Erik <airerik@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "==3.11.9"
filelock = "==3.18.0"
numpy = "==2.2.6"
opencv_python = "==4.10.0.84"
opencv_python_headless = "==4.10.0.84"
opensearch_py = "==2.7.1"
paramiko = "==3.4.1"
Pillow = "==11.2.1"
pydantic = "==2.11.5"
pydantic_settings = "==2.9.1"
pytest = "==8.3.3"
python-dotenv = "==1.1.0"
pyVim = "==3.0.3"
pyvmomi = "==8.0.3.0.1"
SQLAlchemy = "==2.0.36"
uiautomator2 = "==3.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
